<resources>
    <string name="no_match_found"> No matches found, \n  try again</string>
    <string name="splashfirstscreen">FIRSTSCREEN</string>
    <string name="splashsecondscreen">SECONDSCREEN</string>
    <string name="splashthirdscreen">THIRDSCREEN</string>
    <string name="splashfourthscreen">FOURTHSCREEN</string>
    <string name="twitter_consumer_key">5tQwAp0Z802BLmdF709OEsnLD</string>
    <string name="twitter_consumer_secret">1RLaG0VSYdTXHfSRppPvVp3K7cE1T5q4QiUGLxrtbiFgv3t0W8</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="map_api_key_production">AIzaSyC3uVtLGj4yUXwP2ZXOM6YFBD6YI2eu9zE</string>
    <string name="map_api_key_debug">AIzaSyC6hKD-SR0mMqT2mmQNgUHW7kMSGDUGm2U</string>
    <string name="app_name">FLATLAY</string>
    <string name="loading">LOADING...</string>
    <string name="facebook_app_id">1577144115912726</string>
    <string name="no_internet"><![CDATA[No internet connection<br> <u>Try again</u>]]></string>
    <string name="no_data_found">No Collections Yet </string>
    <string name="sign_up_for_free">Sign up for free!</string>
    <string name="mobile_number">mobile number</string>
    <string name="or">or</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="follow_categories_text">Follow some categories 0/3</string>
    <string name="follow_brands_text">Now follow some brands</string>
    <string name="follow_stores_text">Now follow some stores 0/3</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="skip">Skip</string>
    <string name="password">Password</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="next">Next</string>
    <string name="already_signedup">Already signed up with Email?</string>
    <string name="forgot_password">forgot password?</string>
    <string name="resend_pin">resend pin?</string>
    <string name="action_settings">Settings</string>
    <string name="connect_with">Connect with</string>
    <string name="connect_with_twitter">Connect with Twitter</string>
    <string name="orders">Orders</string>
    <string name="no_result_found">No Result Found </string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_instagram">Connect with Instagram</string>
    <string name="kikr_credits">Flatlay\nCredits</string>
    <string name="check_in">Check In</string>
    <string name="profile">Profile</string>
    <string name="my_wallet">Wallet</string>
    <string name="interest">Interests</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="my_friends">My Friends</string>
    <string name="my_profile">My Profile</string>
    <string name="activity">Activity</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="right_click">rightMenuClick</string>
    <string name="venue">Venue</string>
    <string name="search_venue">Search Venue</string>
    <string name="add_venue">Add Venue</string>
    <string name="get_transaction_to_venue">Get Transaction to Venue</string>
    <string name="logout">Logout</string>
    <string name="dummy_price">$0</string>
    <string name="logout_text">Sign Out</string>
    <string name="profile_view">My Profile</string>
    <string name="deals">Deals</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="add_card">+ Add Card</string>
    <string name="post">Post</string>
    <string name="add_description">Add Description</string>
    <string name="retail_banking">Retail Banking</string>
    <string name="my_account_dashboard">My Account Dashboard</string>
    <string name="add_funds">Add Funds</string>
    <string name="update_citi_account">Update Citi account</string>
    <string name="delete_citi_account">Delete Citi Account</string>
    <string name="other_wallets">Other Wallets</string>
    <string name="loyalty_cards">Loyalty Cards</string>
    <string name="regular_price">Price: </string>
    <string name="your_price">Sale Price: </string>
    <string name="read_more">read more</string>
    <string name="google_wallet_unavailable">Google Wallet is unavailable</string>
    <string name="error_code">Error code: %d</string>
    <string name="discover_follow_btn_text">Follow</string>
    <string name="searchYourBank">Search your bank</string>
    <string name="address_format">%1$s\n%2$s\n%3$s%4$s%5$s %6$s %7$s</string>
    <string name="price_format">$%.2f</string>
    <string name="spending_limit_exceeded">You have exceeded your spending limit</string>
    <string name="shipping">Shipping:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="thanks_for_your_order">Thanks for your order</string>
    <string name="confirmation_details">Confirmation details</string>
    <string name="secured_by">Secured by</string>
    <string name="login">Login</string>
    <string name="return_to_shopping">Return to shopping</string>
    <string name="confirmation_text">Your order confirmation number is ABC123.\n\nYour purchase will be shipped within two business days.</string>
    <string name="tutorial_kikr_reward"><![CDATA[<b>Here\'s your Flatlay card!</b><br>(Tap on Card to proceed)]]></string>
    <string name="tutorial_kikr_lines">Welcome to\n The Retail Rewards Card for the Social Generation&#8482;</string>
    <string name="learn_more_text">Learn More</string>
    <string name="kikr_tutorial_text_line_one">1 credit for every $1 you spend on flatlay\n</string>
    <string name="kikr_tutorial_text_line_two">Earn 5 credits for every $1 spent by another user from one of your collections.</string>
    <string name="kikr_tutorial_text_line_three">If another user shares an item from your collections with their followers, you split credit commissions at 2.5 credits per $1 spent</string>
    <string name="kikr_tutorial_text_line_four">100 credits is equivalent to $1 USD</string>
    <string name="enter_pin">Enter Wallet Pin</string>
    <string name="create_pin">Create Wallet Pin</string>
    <string name="confirm_pin">Confirm Wallet Pin</string>
    <string name="facebook_friends_header">Facebook Friends</string>
    <string name="twitter_friends_header">Twitter Friends</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="collection_text_heading">Collections</string>
    <string name="add_collection_text">Add a new Collection</string>
    <string name="share_product_text">Share Product</string>
    <string name="no_friends_found_msg">Friends not found</string>
    <string name="user_followed_successfully">User followed.</string>
    <string name="store_text">Stores</string>
    <string name="brand_text">Brands</string>
    <string name="people_text">People</string>
    <string name="searchYourItem">Search</string>
    <string name="trending_gals_text">Trending Hers</string>
    <string name="trending_guys_text">Trending His</string>
    <string name="trending_text">Trending</string>
    <string name="suggested_friends_text">Suggested Followers</string>
    <string name="months_text">MM</string>
    <string name="years_text">YYYY</string>
    <string-array name="dealcategories">
        <item>Select</item>
        <item>Womens Apparel</item>
        <item>Mens Apparel</item>
        <item>Jewelry &amp; Watches</item>
        <item>Health &amp; Beauty</item>
        <item>Cosmetics &amp; Fragrances</item>
    </string-array>
    <string-array name="countries">
        <item>United States of America</item>
        <item>Canada</item>
    </string-array>
    <string-array name="title">
        <item>Mr.</item>
        <item>Miss</item>
        <item>Mrs.</item>
    </string-array>
    <string-array name="months">
        <item>MM</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years">
        <item>YYYY</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
    </string-array>
    <string name="cancel_text">Cancel</string>
    <string name="buy_text_heading">Buy</string>
    <string name="paypal_text">Paypal</string>
    <string name="credit_card_text">Credit Card</string>
    <string name="need_help">Need Help ?</string>
    <string name="customer_support">Customer Support</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="legal">Legal</string>
    <string name="inspiration_edit_inspiration_description_text">Edit Description</string>
    <string name="inspiration_remove_tag_text">Remove Tag</string>
    <string name="inspiration_remove_product_tag_text">Remove Product Tags</string>
    <string name="inspiration_add_tag_text">Add Tag</string>
    <string name="inspiration_add_product_tag_text">Add Product Tags</string>
    <string name="inspiration_delete_post_text">Delete Post</string>
    <string name="kikr_outside_us_canada">Outside of the US &amp; Canada?\nEarn credits now and use them later!</string>
    <string name="purchase_guarantee_line1">we at flatlay work tirelessly to bring you name brand products from authentic merchants. You purchase directly from the merchants so you get to take advantage of the same return and exchange policy as those shopping directly on the merchant’s website, but with the benefit of Flatlay rewards!</string>
    <string name="purchase_guarantee_line2">fulfillment and shipping of all products for sale on Flatlay are handled by the merchants, not by flatlay.</string>
    <string name="purchase_guarantee_line3"><b>Have a question about your order status, shipment, or returns/exchanges?</b></string>
    <string name="purchase_guarantee_line4">please contact the merchant directly.</string>
    <string name="purchase_guarantee_line5"><b>Have a question a technical question about the app?</b></string>
    <string name="purchase_guarantee_line6">If you have any trouble contacting a merchant directly, please don’t hesitate to reach out to our team for assistance, but know that direct contact with the merchant is usually the quickest &amp; best way to get something resolved.</string>
</resources>