<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />

    <TextView
        android:id="@+id/helpTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/support_help_height"
        android:gravity="center"
        android:text="@string/need_help"
        android:textSize="@dimen/xx_large_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/customerSupportTextView"
            style="@style/supportTextView"
            android:gravity="center_vertical"
            android:text="@string/customer_support" />

        <View style="@style/supportViewStyle" />

        <TextView
            android:id="@+id/termsTextView"
            style="@style/supportTextView"
            android:gravity="center_vertical"
            android:text="@string/terms_of_use" />

        <View style="@style/supportViewStyle" />

        <TextView
            android:id="@+id/privacyTextView"
            style="@style/supportTextView"
            android:gravity="center_vertical"
            android:text="@string/privacy_statement" />

        <View style="@style/supportViewStyle" />

        <TextView
            android:id="@+id/legalTextView"
            style="@style/supportTextView"
            android:gravity="center_vertical"
            android:text="@string/legal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/app_text_color" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textViewOutside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:lineSpacingExtra="3dp"
        android:textColor="@color/app_text_color"
        android:text="@string/kikr_outside_us_canada"
        android:textSize="@dimen/medium_text_size" />
    
    <TextView
	     android:id="@+id/kikr_learn_more"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="@dimen/margin_large"
	     android:gravity="center"
         android:layout_gravity="center"
	     android:text="Learn More"
	     android:textColor="@color/btn_green"
	     android:textSize="@dimen/medium_text_size" />

</LinearLayout>