<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/collection_list_dialog_dimension"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/inspiration_edit_inspiration_description_text"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />

    <TextView
        android:id="@+id/removeTagText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/inspiration_remove_tag_text"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />

    <TextView
        android:id="@+id/removeProductsTagText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/inspiration_remove_product_tag_text"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />

    <TextView
        android:id="@+id/addTagText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/inspiration_add_tag_text"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />

    <TextView
        android:id="@+id/addProductsTagText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/inspiration_add_product_tag_text"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />
    
     <TextView
        android:id="@+id/deletePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/inspiration_delete_post_text"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_text_color" />

    <TextView
        android:id="@+id/cancelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/cancel_text"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size" />

</LinearLayout>