<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/signUpHeaderRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/backArrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="10dp"
            android:src="@drawable/ic_back_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpHeaderRelativeLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/emailEditText"
            style="@style/editTextSignup"
            android:layout_marginBottom="-2dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >
        </EditText>

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/editTextSignup"
            android:layout_marginTop="-2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signup_margin_top" >

            <TextView
                android:id="@+id/maleTextView"
                style="@style/editTextSignup"
                android:layout_weight="1"
                android:background="@drawable/selected_ract"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@color/btn_green" />

            <TextView
                android:id="@+id/femaleTextView"
                style="@style/editTextSignup"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/female" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/ratherNotTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="Rather not." />

        <Button
            android:id="@+id/nextButton"
            style="@style/buttonSignup"
            android:layout_marginTop="@dimen/signup_margin_top"
            android:text="@string/next" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="@string/already_signedup"
            android:textColor="@color/white"
            android:clickable="true"
            android:background="@android:color/transparent"
            android:textSize="@dimen/large_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />
    </LinearLayout>

</RelativeLayout>